photo alignment remade, links animation bugfix

--- a/components/banner.css
+++ b/components/banner.css
@@ -19,7 +19,7 @@
   margin: auto;
   position: absolute;
   right: 0px;
-  top: 0px;
+  top: 100px;
   z-index: 0;
 }
 
